backend/bridge/base/0-backend-namespace.yaml
#! 0-backend-namespace.yaml
# Generated code, do not edit
apiVersion: v1
kind: Namespace
metadata:
    name: backend
    labels:
        com.docker.compose.project: backend
